--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/ciarram/finder-game/issues"
   },
-  "homepage": "https://github.com/ciarram/finder-game#readme"
+  "homepage": "https://github.com/ciarram/finder-game#readme",
+  "dependencies": {
+    "body-parser": "^1.18.2",
+    "express": "^4.16.1"
+  }
 }
